# tensor.hs

./: LICENSE  README.md  tensorhs.cabal
src/: Lambda.hs  Lambda2.hs
src/Data/: Tensor.hs
src/Data/Tensor/: Shape.hs  Tensor.hs
