name:                tensorhs
version:             0.0.1
synopsis:            Tensor Library
description:         Please see README.md
homepage:            http://github.com/mmaroti/tensor.hs
license:             BSD3
license-file:        LICENSE
author:              Miklos Maroti
maintainer:          mmaroti@gmail.com
copyright:           (c) Miklos Maroti, 2016
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Tensor
  build-depends:       base >= 4.7 && < 5,
                       vector -any
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tensorhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmaroti/tensor.hs
